--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "aura-helper-sf",
   "description": "Plugin for SF CLI to addapt sfdx-aura-helper plugin to the new SF CLI Tool. This CLI contains to many util commands for every Salesforce Project. List and Describe metadata types, create package files from many sources (including git), maintenance your local project integrity and much more. Has to many tools to support CLI workflows and many other things",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "dependencies": {
     "@aurahelper/connector": "^2.1.2",
     "@aurahelper/core": "G:\\Workspace\\NodeJS\\Aura Helper Framework\\ah-core",
     "@aurahelper/git-manager": "^2.1.3",
+    "@aurahelper/metadata-factory": "^2.1.5",
     "@aurahelper/xml-compressor": "^2.0.1",
     "@oclif/core": "^2.11.8",
     "@salesforce/core": "^5.2.10",
