--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@aurahelper/connector": "^2.1.2",
     "@aurahelper/core": "G:\\Workspace\\NodeJS\\Aura Helper Framework\\ah-core",
+    "@aurahelper/dependencies-manager": "^2.0.1",
     "@aurahelper/git-manager": "^2.1.3",
     "@aurahelper/ignore": "^2.0.0",
     "@aurahelper/metadata-factory": "^2.1.5",
+    "@aurahelper/package-generator": "^2.1.0",
     "@aurahelper/xml-compressor": "^2.0.1",
     "@oclif/core": "^2.11.8",
     "@salesforce/core": "^5.2.10",
