feat(Commands): converted metadata org apex execute command
Converted Metadata Org Apex Execute Command from SFDX Format to SF Format

--- a/package.json
+++ b/package.json
@@ -135,6 +135,14 @@
                     "description": "Topic to work with special metadata types"
                   }
                 }
+              },
+              "org": {
+                "description": "Topic to work with Salesforce Org Metadata",
+                "subtopics": {
+                  "apex": {
+                    "description": "Topic to work with Apex"
+                  }
+                }
               }
             }
           }
