feat(Commands): converted metadata org permissions get command
Converted Metadata Org Permissions Get Command from SFDX Format to SF Format

--- a/package.json
+++ b/package.json
@@ -141,6 +141,9 @@
                 "subtopics": {
                   "apex": {
                     "description": "Topic to work with Apex"
+                  },
+                  "permissions": {
+                    "description": "description for ah.metadata.org.permissions"
                   }
                 }
               }
