feat(Commands): converted metadata org special retrieve command
Converted Metadata Org Special Retrieve Command from SFDX Format to SF Format

--- a/package.json
+++ b/package.json
@@ -144,6 +144,9 @@
                   },
                   "permissions": {
                     "description": "description for ah.metadata.org.permissions"
+                  },
+                  "special": {
+                    "description": "description for ah.metadata.org.special"
                   }
                 }
               }
