--- a/package.json
+++ b/package.json
@@ -151,6 +151,9 @@
                 }
               }
             }
+          },
+          "package": {
+            "description": "Topic to work with Salesforce Packages XML Files or Create Package Files"
           }
         }
       }
