--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "dependencies": {
     "@aurahelper/connector": "^2.1.2",
-    "@aurahelper/core": "G:\\Workspace\\NodeJS\\Aura Helper Framework\\ah-core",
+    "@aurahelper/core": "^2.5.0",
     "@aurahelper/dependencies-manager": "^2.0.1",
     "@aurahelper/git-manager": "^2.1.3",
     "@aurahelper/ignore": "^2.0.0",
