feat(Commands): added new command to set a custom quality gates
Added new command to set a custom quality gates for any salesforce project to pass or not the report

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.1",
   "dependencies": {
     "@aurahelper/connector": "^2.2.1",
-    "@aurahelper/core": "G:\\Workspace\\NodeJS\\Aura Helper Framework\\ah-core",
+    "@aurahelper/core": "^2.7.0",
     "@aurahelper/dependencies-manager": "^2.0.2",
     "@aurahelper/git-manager": "^2.1.5",
     "@aurahelper/ignore": "^2.0.1",
@@ -164,7 +164,12 @@
             }
           },
           "scan": {
-            "description": "Topic to work with Static Code Analysis, generate reports, customize code quality gates, etc."
+            "description": "Topic to work with Static Code Analysis, generate reports, customize code quality gates, etc.",
+            "subtopics": {
+              "report": {
+                "description": "description for ah.scan.report"
+              }
+            }
           }
         }
       }
